--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG10_U_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG10_U_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
@@ -24,14 +24,14 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-          - DROP TABLE IF EXISTS pkeyBigint1M_1;
-          - CREATE TABLE pkeyBigint1M_1(col_bigint_card1_1 bigint, col_bigint_card2_1 bigint, col_bigint_card3_1 bigint, col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_card1_1, col_bigint_card2_1, col_bigint_card3_1, col_bigint_id_1));
+          - DROP TABLE IF EXISTS iNDG10_U_pkeyBigint1M_1;
+          - CREATE TABLE iNDG10_U_pkeyBigint1M_1(col_bigint_card1_1 bigint, col_bigint_card2_1 bigint, col_bigint_card3_1 bigint, col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_card1_1, col_bigint_card2_1, col_bigint_card3_1, col_bigint_id_1));
 
         cleanup:
-            - DROP TABLE IF EXISTS pkeyBigint1M_1;
+            - DROP TABLE IF EXISTS iNDG10_U_pkeyBigint1M_1;
 
         loadRules:
-              - table: pkeyBigint1M_
+              - table: iNDG10_U_pkeyBigint1M_
                 count: 1
                 rows: 1000000
                 columns:
@@ -84,14 +84,14 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000
+                        - query: select * from iNDG10_U_pkeyBigint1M_1 where col_bigint_card1_1=1000000
 
             - workload: INDG10_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from pkeyBigint1M_1 where col_bigint_card2_1=1000498
+                        - query: select * from iNDG10_U_pkeyBigint1M_1 where col_bigint_card2_1=1000498
 
             - workload: INDG10_4_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k_two_conditions
               customTags: customer=1
@@ -99,7 +99,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1=1000498
+                        - query: select * from iNDG10_U_pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1=1000498
 
             - workload: INDG10_5_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               customTags: customer=2
@@ -107,4 +107,4 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card3_1=5000999
+                        - query: select * from iNDG10_U_pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card3_1=5000999
