--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG3_U_pkey_hash_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG3_U_pkey_hash_tbl_range_selects_indexscan.yaml
@@ -20,15 +20,15 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS CompositeHashtbl_1;
-            - CREATE TABLE CompositeHashtbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1, col_bigint_id_2));
+            - DROP TABLE IF EXISTS INDG3_U_CompositeRangetbl_1;
+            - CREATE TABLE INDG3_U_CompositeRangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1, col_bigint_id_2));
 
         cleanup:
-            - DROP TABLE IF EXISTS CompositeHashtbl_1;
+            - DROP TABLE IF EXISTS INDG3_U_CompositeRangetbl_1;
 
         loadRules:
 
-              - table: CompositeHashtbl_
+              - table: INDG3_U_CompositeRangetbl_
                 count: 1
                 rows: 1000000
                 columns:
@@ -71,25 +71,25 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_1>500000
+                        - query: select * from INDG3_U_CompositeRangetbl_1 where col_bigint_id_1>500000
 
             - workload: INDG3_2_hashtbl_range_lookup_index_scan_using_comp_pkey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_2>500000
+                        - query: select * from INDG3_U_CompositeRangetbl_1 where col_bigint_id_2>500000
 
             - workload: INDG3_3_hashtbl_range_lookup_index_scan_using_comp_pkey_using_two_conditions_hash_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
+                        - query: select * from INDG3_U_CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
 
             - workload: INDG3_4_hashtbl_range_lookup_index_scan_using_pkey_two_conditions_both_hash
               run:
                   - name: hashtbl_index_scan_pkey
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
+                        - query: select * from INDG3_U_CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
