--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG9_U_idx_type_on_increasing_row_range_scan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG9_U_idx_type_on_increasing_row_range_scan.yaml
@@ -20,20 +20,20 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS Rangetbl_comp_skey_1;
-            - CREATE TABLE Rangetbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
-            - CREATE INDEX ON Rangetbl_comp_skey_1(col_bigint_id_2);
-            - DROP TABLE IF EXISTS Rangetbl_comp_skey_2;
-            - CREATE TABLE Rangetbl_comp_skey_2(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
-            - CREATE INDEX ON Rangetbl_comp_skey_2(col_bigint_id_1);
+            - DROP TABLE IF EXISTS INDG9_U_Rangetbl_comp_skey_1;
+            - CREATE TABLE INDG9_U_Rangetbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE INDEX ON INDG9_U_Rangetbl_comp_skey_1(col_bigint_id_2);
+            - DROP TABLE IF EXISTS INDG9_U_Rangetbl_comp_skey_2;
+            - CREATE TABLE INDG9_U_Rangetbl_comp_skey_2(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE INDEX ON INDG9_U_Rangetbl_comp_skey_2(col_bigint_id_1);
 
         cleanup:
-            - DROP TABLE IF EXISTS Rangetbl_comp_skey_1;
-            - DROP TABLE IF EXISTS Rangetbl_comp_skey_2;
+            - DROP TABLE IF EXISTS INDG9_U_Rangetbl_comp_skey_1;
+            - DROP TABLE IF EXISTS INDG9_U_Rangetbl_comp_skey_2;
 
         loadRules:
 
-              - table: Rangetbl_comp_skey_
+              - table: INDG9_U_Rangetbl_comp_skey_
                 count: 2
                 rows: 1000000
                 columns:
@@ -72,55 +72,55 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_1>1
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_1>1
 
             - workload: INDG9_2_rangetbl_range_lookup_pkey_select_10k_rows_pkey_scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_1>990000
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_1>990000
 
             - workload: INDG9_3_rangetbl_range_lookup_skey_select_1m_rows_index_scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_2>1
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_2>1
 
             - workload: INDG9_4_rangetbl_range_lookup_skey_select_10k_rows_index_scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_2>990000
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_2>990000
 
             - workload: INDG9_5_rangetbl_range_lookup_nonidx_select_1m_rows_seq_scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_3>1
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_3>1
 
             - workload: INDG9_6_rangetbl_range_lookup_nonidx_select_10k_rows_seq_scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_3>990000
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_1 where col_bigint_id_3>990000
 
             - workload: INDG9_7_rangetbl_range_lookup_col_with_pkey_skey_declared_select_1m
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_2 where col_bigint_id_1>1
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_2 where col_bigint_id_1>1
 
             - workload: INDG9_8_rangetbl_range_lookup_col_with_pkey_skey_declared_select_10k
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Rangetbl_comp_skey_2 where col_bigint_id_1>990000
+                        - query: select * from INDG9_U_Rangetbl_comp_skey_2 where col_bigint_id_1>990000
 
 
