--- a/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG4_U_pkey_range_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG4_U_pkey_range_tbl_range_selects_indexscan.yaml
@@ -22,15 +22,15 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS CompositeRangetbl_1;
-            - CREATE TABLE CompositeRangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC, col_bigint_id_2 ASC));
+            - DROP TABLE IF EXISTS INDG4_U_CompositeRangetbl_1;
+            - CREATE TABLE INDG4_U_CompositeRangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC, col_bigint_id_2 ASC));
 
         cleanup:
-            - DROP TABLE IF EXISTS CompositeRangetbl_1;
+            - DROP TABLE IF EXISTS INDG4_U_CompositeRangetbl_1;
 
         loadRules:
 
-              - table: CompositeRangetbl_
+              - table: INDG4_U_CompositeRangetbl_
                 count: 1
                 rows: 1000000
                 columns:
@@ -74,7 +74,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeRangetbl_1 where col_bigint_id_1>500000
+                        - query: select * from INDG4_U_CompositeRangetbl_1 where col_bigint_id_1>500000
 
             - workload: INDG4_2_rangetbl_range_lookup_index_scan_using_comp_pkey_sec_part_range
               customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
@@ -82,7 +82,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeRangetbl_1 where col_bigint_id_2>500000
+                        - query: select * from INDG4_U_CompositeRangetbl_1 where col_bigint_id_2>500000
 
             - workload: INDG4_3_rangetbl_range_lookup_index_scan_using_comp_pkey_using_two_conditions_range
               customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
@@ -90,7 +90,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
+                        - query: select * from INDG4_U_CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
 
             - workload: INDG4_4_rangetbl_range_lookup_index_scan_using_pkey_two_conditions_range
               customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
@@ -98,4 +98,4 @@ microbenchmark:
                   - name: hashtbl_index_scan_pkey
                     weight: 100
                     queries:
-                        - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
+                        - query: select * from INDG4_U_CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
