--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG13_U_compare_index_scan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG13_U_compare_index_scan.yaml
@@ -21,15 +21,15 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS INDG13_INDG13_rangetbl_1;
-            - CREATE TABLE INDG13_rangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
-            - CREATE INDEX ON INDG13_rangetbl_1(col_bigint_id_2 ASC);
+            - DROP TABLE IF EXISTS INDG13_U_rangetbl_1;
+            - CREATE TABLE INDG13_U_rangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+            - CREATE INDEX ON INDG13_U_rangetbl_1(col_bigint_id_2 ASC);
 
         cleanup:
-            - DROP TABLE IF EXISTS INDG13_rangetbl_1;
+            - DROP TABLE IF EXISTS INDG13_U_rangetbl_1;
 
         loadRules:
-              - table: INDG13_rangetbl_
+              - table: INDG13_U_rangetbl_
                 count: 1
                 rows: 1000000
                 columns:
@@ -72,7 +72,7 @@ microbenchmark:
                   - name: join_on_pk_of_range_tbl
                     weight: 100
                     queries:
-                        - query: select col_bigint_id_1 from INDG13_rangetbl_1 where col_bigint_id_1>0
+                        - query: select col_bigint_id_1 from INDG13_U_rangetbl_1 where col_bigint_id_1>0
 
             -   workload: INDG13_2_indexonlyscan_using_skey
                 customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,queryshape=join,joinon=rangepkey
@@ -80,7 +80,7 @@ microbenchmark:
                     -   name: join_on_pk_of_range_tbl
                         weight: 100
                         queries:
-                            -   query: select col_bigint_id_2 from INDG13_rangetbl_1 where col_bigint_id_2>0
+                            -   query: select col_bigint_id_2 from INDG13_U_rangetbl_1 where col_bigint_id_2>0
 
             -   workload: INDG13_3_indexscan_using_skey
                 customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,queryshape=join,joinon=rangepkey
@@ -88,4 +88,4 @@ microbenchmark:
                     -   name: join_on_pk_of_range_tbl
                         weight: 100
                         queries:
-                            -   query: select col_bigint_id_1 from INDG13_rangetbl_1 where col_bigint_id_2>0
+                            -   query: select col_bigint_id_1 from INDG13_U_rangetbl_1 where col_bigint_id_2>0
