--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG1_U_pkey_point_selects_hash_table_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG1_U_pkey_point_selects_hash_table_indexscan.yaml
@@ -21,15 +21,15 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS CompositeHashtbl_1;
-            - CREATE TABLE CompositeHashtbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1, col_bigint_id_2));
+            - DROP TABLE IF EXISTS INDG1_U_CompositeHashtbl_1;
+            - CREATE TABLE INDG1_U_CompositeHashtbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1, col_bigint_id_2));
 
         cleanup:
-            - DROP TABLE IF EXISTS CompositeHashtbl_1;
+            - DROP TABLE IF EXISTS INDG1_U_CompositeHashtbl_1;
 
         loadRules:
 
-              - table: CompositeHashtbl_
+              - table: INDG1_U_CompositeHashtbl_
                 count: 1
                 rows: 1000000
                 columns:
@@ -74,7 +74,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_1=500009
+                        - query: select * from INDG1_U_CompositeHashtbl_1 where col_bigint_id_1=500009
 
             - workload: INDG1_2_hashtbl_point_lookup_index_scan_using_comp_pkey_sec_part_range
               customTags: schematype=regular,partition=hash,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
@@ -82,5 +82,5 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from CompositeHashtbl_1 where col_bigint_id_2=500009
+                        - query: select * from INDG1_U_CompositeHashtbl_1 where col_bigint_id_2=500009
 
