--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG7_U_sec_index_hash_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG7_U_sec_index_hash_tbl_range_selects_indexscan.yaml
@@ -21,17 +21,17 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS Hashtbl_comp_skey_1;
-            - CREATE TABLE Hashtbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
-            - CREATE INDEX ON Hashtbl_comp_skey_1(col_bigint_id_2, col_bigint_id_3);
-            - CREATE INDEX ON Hashtbl_comp_skey_1(col_bigint_id_4, col_bigint_id_5 ASC);
+            - DROP TABLE IF EXISTS INDG7_U_Hashtbl_comp_skey_1;
+            - CREATE TABLE INDG7_U_Hashtbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE INDEX ON INDG7_U_Hashtbl_comp_skey_1(col_bigint_id_2, col_bigint_id_3);
+            - CREATE INDEX ON INDG7_U_Hashtbl_comp_skey_1(col_bigint_id_4, col_bigint_id_5 ASC);
 
         cleanup:
-            - DROP TABLE IF EXISTS Hashtbl_comp_skey_1;
+            - DROP TABLE IF EXISTS INDG7_U_Hashtbl_comp_skey_1;
 
         loadRules:
 
-              - table: Hashtbl_comp_skey_
+              - table: INDG7_U_Hashtbl_comp_skey_
                 count: 1
                 rows: 1000000
                 columns:
@@ -71,7 +71,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_2>500000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_2>500000
 
             - workload: INDG7_2_hashtbl_range_lookup_index_scan_using_comp_skey_sec_part_range
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
@@ -79,7 +79,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_3>500000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_3>500000
 
             - workload: INDG7_3_hashtbl_range_lookup_index_scan_using_mixed_comp_skey_first_part_hash
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
@@ -87,7 +87,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_4>500000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_4>500000
 
             - workload: INDG7_4_hashtbl_range_lookup_index_scan_using_mixed_comp_skey_sec_part_range
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
@@ -95,7 +95,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_5>500000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_5>500000
 
             - workload: INDG7_5_hashtbl_range_lookup_index_scan_using_comp_skey_two_conditions_both_hash
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=mixedskey,filtertype=comparision,queryshape=scan
@@ -103,7 +103,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_3<750000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_3<750000
 
             - workload: INDG7_6_hashtbl_range_lookup_index_scan_using_mixed_comp_skey_two_conditions_hash_range
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=mixedskey,filtertype=comparision,queryshape=scan
@@ -111,7 +111,7 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_4>250000 and col_bigint_id_5<750000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_4>250000 and col_bigint_id_5<750000
 
             - workload: INDG7_7_hashtbl_range_lookup_index_scan_using_skey_two_conditions_on_hash
               customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=hashskey,filtertype=comparision,queryshape=scan
@@ -119,4 +119,4 @@ microbenchmark:
                   - name: hashtbl_index_scan_pkey
                     weight: 100
                     queries:
-                        - query: select * from Hashtbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_2<750000
+                        - query: select * from INDG7_U_Hashtbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_2<750000
