tablename fixes init

--- a/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG11_U_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/postgres/INDG11_U_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
@@ -23,14 +23,14 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-          - DROP TABLE IF EXISTS iNDG11_U_pkeyVarchar10_1;
-          - CREATE TABLE iNDG11_U_pkeyVarchar10_1(col_varchar_card1_1 varchar(15), col_varchar_card2_1 varchar(15), col_varchar_card3_1 varchar(15), col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_varchar_card1_1, col_varchar_card2_1, col_varchar_card3_1, col_bigint_id_1));
+          - DROP TABLE IF EXISTS INDG11_U_pkeyVarchar10_1;
+          - CREATE TABLE INDG11_U_pkeyVarchar10_1(col_varchar_card1_1 varchar(15), col_varchar_card2_1 varchar(15), col_varchar_card3_1 varchar(15), col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_varchar_card1_1, col_varchar_card2_1, col_varchar_card3_1, col_bigint_id_1));
 
         cleanup:
-            - DROP TABLE IF EXISTS iNDG11_U_pkeyVarchar10_;
+            - DROP TABLE IF EXISTS INDG11_U_pkeyVarchar10_1;
 
         loadRules:
-              - table: iNDG11_U_pkeyVarchar10_
+              - table: INDG11_U_pkeyVarchar10_
                 count: 1
                 rows: 1000000
                 columns:
@@ -81,14 +81,14 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from iNDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000'
+                        - query: select * from INDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000'
 
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from iNDG11_U_pkeyVarchar10_1 where col_varchar_card2_1='id-1000498'
+                        - query: select * from INDG11_U_pkeyVarchar10_1 where col_varchar_card2_1='id-1000498'
 
 
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k_two_conditions
@@ -97,18 +97,18 @@ microbenchmark:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from iNDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card2_1='id-1000898'
+                        - query: select * from INDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card2_1='id-1000898'
 
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from iNDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
+                        - query: select * from INDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
 
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from iNDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
+                        - query: select * from INDG11_U_pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
