--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG11_U_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG11_U_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
@@ -28,7 +28,7 @@ microbenchmark:
           - CREATE TABLE INDG11_U_pkeyVarchar10_1(col_varchar_card1_1 varchar(15), col_varchar_card2_1 varchar(15), col_varchar_card3_1 varchar(15), col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_varchar_card1_1, col_varchar_card2_1, col_varchar_card3_1, col_bigint_id_1));
 
         cleanup:
-            - DROP TABLE IF EXISTS INDG11_U_pkeyVarchar10_;
+            - DROP TABLE IF EXISTS INDG11_U_pkeyVarchar10_1;
 
         loadRules:
               - table: INDG11_U_pkeyVarchar10_
