--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG13_compare_index_scan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG13_compare_index_scan.yaml
@@ -21,7 +21,7 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS INDG13_INDG13_rangetbl_1;
+            - DROP TABLE IF EXISTS INDG13_rangetbl_1;
             - CREATE TABLE INDG13_rangetbl_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
             - CREATE INDEX ON INDG13_rangetbl_1(col_bigint_id_2 ASC);
 
